updated erl link

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set.html" target="_blank" >Online simulator</a>&nbsp;|&nbsp;<a href="models/set.zip" target="_blank" >source file</a></span></div>
 			<br/>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set2.html" target="_blank" style="text-decoration:underline;">SET Model 2.0</a></span></div>
-			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="http://arxiv.org/abs/1602.01203" target="_blank" >Article in <b>Env. Res. Let.</b> (2016)</a></span></div>
+			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="http://iopscience.iop.org/article/10.1088/1748-9326/11/9/094009" target="_blank" >Article in <b>Env. Res. Let.</b> (2016)</a></span></div>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="http://arxiv.org/abs/1503.06832" target="_blank" >Preprint on <b>arXiv</b> (2015)</a></span></div>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set2.html" target="_blank" >Online simulator</a>&nbsp;|&nbsp;<a href="models/set2.zip" target="_blank" >source file</a></span></div>
 			<br/>
