--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <img onclick="disp_content('#content',myhash);" src="scatter.png" alt="Sankey Diagram" title="Morphology" style="height:20px; width:20px; margin-left:5px; margin-top:0px;">
         <img onclick="disp_content('#description','#&description')" src="help.png" alt="Description" title="Description" style="height:20px; width:20px; margin-left:0px; margin-top:0px; margin-right:10px;">
         <span id="titletext" class="pagetitle" title="Food Energy Flows" onclick="document.getElementById('helppop').style.display='block'">Sustainable Energy Transitions</span>
-		<span class="pagetitle" style="positions:relative;float:right;right:30px;top:0px;"><a href="https://sowersway.org/" target="_blank">The Sower's Way</a></span>
+		<span class="pagetitle" style="positions:relative;float:right;right:30px;top:0px;"><a href="http://sowersway.org/" target="_blank">The Sower's Way</a></span>
     </div>
 	
 	<!--LOADING-->
@@ -237,11 +237,11 @@
 			<span class="button" onclick='d3.select("#main").attr("src","plots/TDI_Histograms.png");'>Histograms</span></div>
 			<br/>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set.html" target="_blank" style="text-decoration:underline;">SET Model 1.0</a></span></div>
-			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="https://www.mdpi.com/2071-1050/6/5/2601" target="_blank" >Article in <b>Sustainability</b> (2014)</a></span></div>
+			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="http://www.mdpi.com/2071-1050/6/5/2601" target="_blank" >Article in <b>Sustainability</b> (2014)</a></span></div>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set.html" target="_blank" >Online simulator</a>&nbsp;|&nbsp;<a href="models/set.zip" target="_blank" >source file</a></span></div>
 			<br/>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set2.html" target="_blank" style="text-decoration:underline;">SET Model 2.0</a></span></div>
-			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="https://iopscience.iop.org/article/10.1088/1748-9326/11/9/094009" target="_blank" >Article in <b>Env. Res. Let.</b> (2016)</a></span></div>
+			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="http://iopscience.iop.org/article/10.1088/1748-9326/11/9/094009" target="_blank" >Article in <b>Env. Res. Let.</b> (2016)</a></span></div>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="https://arxiv.org/abs/1503.06832" target="_blank" >Preprint on <b>arXiv</b> (2015)</a></span></div>
 			<div style="display:block;overflow: hidden;white-space: nowrap;line-height:22px;"><span style="float:left;"><a href="set2.html" target="_blank" >Online simulator</a>&nbsp;|&nbsp;<a href="models/set2.zip" target="_blank" >source file</a></span></div>
 			<br/>
@@ -289,14 +289,14 @@
 							<li>This work has resulted so far in numerous conference presentations and one journal article with another one in preparation.</li>
 							<li>It also serves as the main topic for one doctoral dissertation and multiple master's theses under development.</li>
 							<li>Shortly referred to as <i>The Sower's Way</i>, this work lead to the establishment of a <a href="mailto:energytransition@googlegroups.com" style="color:#fff;">mailing list</a> and<br> continuously sparks extensive discussion in the energy-climate researcher community.</li>
-							<li>The Sower's Way concept is presented more extensively on <a href="https://sowersway.org" target="_blank" style="color:#fff;">https://sowersway.org.</a></li>
+							<li>The Sower's Way concept is presented more extensively on <a href="http://sowersway.org" target="_blank" style="color:#fff;">http://sowersway.org.</a></li>
 							<li>The SET Model 1.0 has almost 3000 runs and on runthemodel.com and multiple positive reviews.</li>
 							<li>On the same platform, it has been selected the model of the month in June 2014.</li>
 						</ul>
 					</li>
 					<li>Authors
 						<ul>
-							<li>This is a project by <a href="https://www.ssgouridis.org" target="_blank" style="color:#fff;">Sgouris Sgouridis</a> and <a href="https://www.csaladen.es" target="_blank" style="color:#fff;">Denes Csala</a> at <a style="color:#fff;" href="https://www.masdar.ac.ae" target="_blank">Masdar Institute of Science and Technology</a>.</li>
+							<li>This is a project by <a href="http://www.ssgouridis.org" target="_blank" style="color:#fff;">Sgouris Sgouridis</a> and <a href="https://www.csaladen.es" target="_blank" style="color:#fff;">Denes Csala</a> at <a style="color:#fff;" href="https://www.masdar.ac.ae" target="_blank">Masdar Institute of Science and Technology</a>.</li>
 						</ul>
 					</li>
                 </ul>
